feat: Add hover effect and cursor pointer to image wrapper

--- a/Medium/image-hover-effects/styles.css
+++ b/Medium/image-hover-effects/styles.css
@@ -36,6 +36,9 @@ body {
 .image-wrapper > .image-overlay {
   transition: 200ms ease-in-out;
 }
+.image-wrapper:hover {
+  cursor: pointer;
+}
 
 /* TODO - Blur */
 .image-wrapper:hover > img.blur {
