--- a/Hard/price-comparison-table/styles.css
+++ b/Hard/price-comparison-table/styles.css
@@ -41,7 +41,12 @@ body {
 
 .price-column.popular {
   background-color: var(--accent-color);
+  box-shadow: 0 7px 30px rgba(52, 13, 135, 0.3);
   color: white;
+  margin-top: -1.5rem;
+  padding-top: 3.5rem;
+  margin-bottom: -1.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .price-column:first-child {
@@ -52,4 +57,49 @@ body {
 .price-column:last-child {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+}
+
+/* Price header */
+.price-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+}
+
+.price {
+  display: flex;
+  font-size: 3.5rem;
+}
+
+.dollar-sign {
+  font-size: 2rem;
+  margin-right: 0.25rem;
+}
+
+.per-month {
+  font-size: 1rem;
+  align-self: flex-end;
+  margin-bottom: 1.1rem;
+  text-transform: uppercase;
+}
+
+.plan-name {
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+
+.divider {
+  height: 1px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.price-column.popular .divider {
+  background-color: rgba(255, 255, 255, 0.2);
 }
