--- a/Hard/vertical-timeline/styles.css
+++ b/Hard/vertical-timeline/styles.css
@@ -3,6 +3,7 @@
   --text-color: #555;
   --avatar-size: 50px;
   --grid-gap: 1rem;
+  --group-header-spacing: 1rem;
 }
 
 *,
@@ -11,9 +12,18 @@
   box-sizing: border-box;
 }
 
+.notification-section {
+  margin-bottom: 2rem;
+}
+
+.notification-section:last-child {
+  margin-bottom: none;
+}
+
 body {
   background-color: #f3f3f3;
   color: var(--text-color);
+  font-family: "Poppins", sans-serif;
 }
 
 .avatar > img {
@@ -28,6 +38,9 @@ body {
   grid-template-columns: var(--avatar-size) 1fr;
   grid-auto-rows: auto;
   gap: var(--grid-gap);
+  max-width: 750px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .avatar {
@@ -38,7 +51,7 @@ body {
   content: "";
   position: absolute;
   background-color: var(--subdued-color);
-  width: 2px;
+  width: 1px;
   margin: 0 auto;
   left: 0;
   right: 0;
@@ -46,6 +59,17 @@ body {
   bottom: calc(var(--grid-gap) * -1);
 }
 
+.avatar:first-child::before {
+  content: "";
+  position: absolute;
+  background-color: var(--subdued-color);
+  width: 1px;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  top: calc(-1 * var(--group-header-spacing));
+  bottom: 100%;
+}
 .avatar:nth-last-child(2)::after {
   display: none;
 }
@@ -59,6 +83,7 @@ body {
 
 .notification-header {
   display: flex;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -85,4 +110,16 @@ body {
 img {
   width: 3rem;
   height: 3rem;
+}
+
+.group-header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--subdued-color);
+  padding-bottom: 0.25rem;
+  margin-bottom: var(--group-header-spacing);
+}
+
+.group-date {
+  color: var(--subdued-color);
 }
